setup account data self service
