# api/src/account/dto/update-consents.dto.ts
@@ -1,0 +1,12 @@
+import { IsBoolean, IsOptional } from 'class-validator';
+import type { UpdateAccountConsentsRequest } from '../../contracts/generated/types.gen';
+
+export class UpdateConsentsDto implements UpdateAccountConsentsRequest {
+  @IsOptional()
+  @IsBoolean()
+  analyticsEnabled?: boolean;
+
+  @IsOptional()
+  @IsBoolean()
+  productResearchEnabled?: boolean;
+}
